Fix crash when deleting a category and doing a second category action.

After deleting a category via the Settings::CategoryPage, the deleted
category would remain in the list of categories to delete.
If one then opened the category page again and chose "OK" or "Apply",
KPhotoAlbum would try to remove the already removed category again,
triggering an assertion.

BUG: 477531